#pragma once

class Statistics {
public:
	float calculate_completion_rate();
};

extern Statistics statistics;